# Custom-GNSS

./: README.md
Hardware/GNSS-board-v0/: .gitignore  gnss-board-v0.kicad_prl  gnss-board-v0.kicad_pro
Hardware/GPS_Frontend/: .gitignore  GPS_Frontend.kicad_pcb  GPS_Frontend.kicad_prl  GPS_Frontend.kicad_pro  GPS_Frontend.kicad_sch
Logs/: bit-sync-test-l1ca-1-9-25.csv  first-snr-test-l1ca-1-4-25.csv  first_solution_combined-1-11-25.kml  first_solution_l1ca-1-11-25.kml  iq-test-e1-1-4-25.csv  iq-test-l1ca-1-4-25.csv  waas_test-2-24-25.csv
RTL/: .gitignore  dfx_runtime.txt  fem_record_fpga.prm  fem_test_fpga.prm  system_fpga.prm  test.prm
RTL/constraints/: Arty-S7-50-Master.xdc
RTL/include/: cache_if.vh  common_gnss_types.vh  common_types.vh  execute_to_memory_if.vh  gnss_channel_satellite_if.vh
RTL/scripts/: ac_pca_search_tb.tcl  ahb_gnss_satellite_tb.tcl  cla_16_bit_tb.tcl  cla_32_bit_tb.tcl  cla_4_bit_tb.tcl  fem_record_fpga.tcl  fem_record_tb.tcl  fem_test_fpga.tcl  gnss_tb.tcl  l1ca_channel_tb.tcl  l1ca_code_tb.tcl  l1ca_fine_search_tb.tcl  l1ca_search_tb.tcl  mult_16x16_tb.tcl  spi_tx_tb.tcl  system_fpga.tcl  (+1 more)
Scripts/: bit_density_check.py  frequency_check.py  generate_code_slip_lut.py  generate_lut.py  nco_generate.py  starting_phase.py
Simulation/: signal_simulation.py
Simulation/TrackerSim/: CMakeLists.txt  evolve.py
Simulation/TrackerSim/fftw3/: libfftw3-3.exp  libfftw3-3.lib
Simulation/TrackerSim/src/: acq_e1c.cpp  acq_e1c.h  acq_l1ca.cpp  acq_l1ca.h  acq_waas.cpp  acq_waas.h  ephm_e1.cpp  ephm_e1.h  ephm_l1ca.cpp  ephm_l1ca.h  filters.cpp  filters.h  main.cpp  sig_gen.cpp  sig_gen.h  solve.cpp  solve.h  tools.cpp  tools.h  track_e1.cpp  track_e1.h  track_l1ca.cpp  track_l1ca.h  track_waas.cpp  track_waas.h
(+55 files in other folders)
